...
                                                  currentUserId, publication.id)
                                              isLiked.value = true
                                            })
                                      }
                                      .testTag("PublicationItem_$page")) {
                                if (publication.mediaType == MediaType.VIDEO) {
                                  VideoItem(
                                      context = LocalContext.current,
                                      mediaUrl = publication.mediaUrl,
                                      modifier = Modifier.testTag("VideoItem_$page"))
                                } else {
                                  PhotoItem(
                                      thumbnailUrl = publication.thumbnailUrl,
...
